[BE] Handle access_token
