# swagger/v1/swagger.yaml
@@ -176,14 +176,9 @@ paths:
       summary: Create a new progose
       tags:
       - Progoses
-      parameters:
-      - name: user_id
-        required: true
-        in: query
-        example: '1'
-        description: Users ID
       security:
       - bearer_auth: []
+      parameters: []
       responses:
         '200':
           description: OK
@@ -573,6 +568,71 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/server_error"
+  "/api/v1/users/sessions/sign_in":
+    post:
+      summary: 'API: Sign up'
+      tags:
+      - Sessions
+      parameters:
+      - name: Accept-Language
+        in: header
+        example: ja
+        schema:
+          type: string
+      security:
+      - bearer_auth: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  example:
+                    type: object
+                    "$ref": "#/components/schemas/detail_session"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/bad_request"
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/unauthorized"
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/unprocessable_entity"
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/server_error"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id_token:
+                  type: string
+                  example: eyJhbGciOiJSUzI1NiIsImtpZCI6IjY3NGRiYmE4ZmFlZTY5YWNhZTFiYzFiZTE5MDQ1MzY3OGY0NzI4MDMiLCJ0eXAiOiJKV1QifQ
+                  description: User's id_token
+        required: true
   "/test":
     get:
       summary: check api
@@ -621,6 +681,28 @@ components:
           type: string
           example: https://odori-park.jp/
           description: URL of the Custom data's website
+    detail_session:
+      type: object
+      properties:
+        user:
+          type: object
+          properties:
+            id:
+              type: integer
+              example: 1
+              description: User's ID
+            email:
+              type: string
+              example: mai.trong.dung@sun-asterisk.com
+              description: User's email
+            name_roma:
+              type: string
+              example: Mai Trong Dung
+              description: User's name_roma
+        access_token:
+          type: string
+          example: 21478b6fdbb63717f2d9c21da9f396945263f282a68c227d4ea00b8bb21966bc
+          description: User's access token
     detail_progose:
       type: object
       properties:
